<resources>
    <string name="app_name">Peach</string>

    <string name="a_fun_simple_way">A fun, simple way to keep up</string>
    <string name="with_friends">with connections and be yourself.</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="have_an_account">Have an account already?</string>
    <string name="by_using_peach">By using Peach you agree to the</string>
    <string name="privacy_policy"><b>Privacy Policy</b> and <b>Terms</b>.</string>
    <string name="email_or_username">Email or username</string>
    <string name="prompt_password">Password (8+ letters or numbers)</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="want_to_reset">Want to reset your password?</string>
    <string name="enter_your_email">Enter your email address</string>
    <string name="reset">Reset</string>
    <string name="required">Required</string>
    <string name="invalid_email_password_pair">Invalid email/password pair</string>

    <string name="friends_of_friends">Friends of Friends</string>

    <string name="search_friends">Search Friends</string>
    <string name="tell_a_friend">Tell a Friend</string>
    <string name="add_friend">Add Friend&#8230;</string>
    <string name="sign_out">Sign Out</string>

    <string name="error_loading">Error Loading</string>
</resources>
